--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,19 @@ body {
 }
 
 #homePref {
-    width: 805px;
+    width: 760px;
     float: left;
-    border: 3px solid #000;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    padding: 20px;
 }
 
 #searchPref {
-    width: 805px;
+    width: 760px;
     float: right;
-    border: 3px solid #000
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    padding: 20px;
 }
 
 /* Classes */
@@ -162,4 +166,55 @@ body {
     background-color: #f3f3f3;
     transition: all 0.5s ease-in-out;
     -webkit-transition: all 0.5s ease-in-out;
+}
+
+/* Flip Switch */
+.switch {
+    display: inline-block;
+    height: 17px;
+    position: relative;
+    width: 30px;
+    top: 3px;
+}
+
+.switch input {
+    display: none;
+}
+
+.slider {
+    background-color: #ccc;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: .4s;
+}
+
+.slider:before {
+    background-color: #fff;
+    bottom: 2px;
+    content: "";
+    height: 13px;
+    left: 2px;
+    position: absolute;
+    transition: .4s;
+    width: 13px;
+}
+
+input:checked + .slider {
+    background-color: #ff9900;
+}
+
+input:checked + .slider:before {
+    transform: translateX(13px);
+}
+
+.slider.round {
+    border-radius: 17px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
